  * added possibility to split dirs for the whole repo 
    (to be able to exchange repos with split directories)
  * added commands "private", "recache", "split_all_dirs" to ck add/update repo
  * added try/catch around encode/decode routines to better support non-UTF locale
  * can use wildcards when searching for UIDs

* V1.11.2
  * fixed typo
  * added possibility to force index data for specific repos via local kernel meta:
    "index_repos":[list of repo UIDs and aliases]
  * bug fix for split directories if UID is used for an entry with alias
  * fixed link to CK slack channel
  * added zip_safe=False

* V1.11.1
  * fixed ck.bat on Windows (if CK_ROOT has spaces)
  * added possibility to add sub-directory for all entries of a given module based on first N characters of an entry name;
    this is needed to handle millions of entries;
    it can be configured via local kernel meta: "split_dirs":{"module UOA":N} 
  * improved "ck help" function
  * added support for the latest ElasticSearch via Python client
  * improved CK search via ElasticSearch
  * added possibility to auto convert all entry names to lower case;
    it can be configured via local kernel meta: "force_lower":"yes"
  * added check for allowed entry names;
    it can be configured as RE via local kernel meta: 
    "allowed_entry_names": "^[A-Za-z0-9_@. -]*$"
  * added check for allowed action names in modules;
    it can be configured as RE via local kernel meta: 
    "allowed_action_names": "^[A-Za-z_-]*$"
  * added possibility to index data for only specific modules via local kernel meta:
    "index_modules":[list of module UIDs and aliases]
  * removed AUTHORS.txt as non-standard (leaving CONTRIBUTIONS.txt)
  * added possibility to skip SSL certificate check for remote repositories
  * added CK kernel functions save_state(), restore_state, reinit
    to let multiple CK instances co-exist

* V1.10.3
  * fixed major bug with kernel version checking

* V1.10.2
  * fixed mistake in PyPi release
